Kubernetes/k8s-foxids-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-deployment
  labels:
    app: foxids
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foxids
  template:
    metadata:
      labels:
        app: foxids
    spec:
      containers:
        - name: foxids
          image: foxids/foxids:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-control-deployment
  labels:
    app: foxids-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foxids-control
  template:
    metadata:
      labels:
        app: foxids-control
    spec:
      containers:
        - name: foxids-control
          image: foxids-control:1.4.2
          #image: foxids/foxids-control:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foxids-service
spec:
  selector:
    app: foxids
  ports:
    - name: http
      protocol: TCP
      port: 8800
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foxids
spec:
  selector:
    app: foxids
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8800
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foxids-control
spec:
  selector:
    app: foxids-control
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8801
      targetPort: 80
