Kubernetes/k8s-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: mongo-data
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
# --- # optionally expose MongoDB on port 27017
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo
# spec:
#   selector:
#     app: mongodb
#   type: LoadBalancer
#   ports:
#     - protocol: TCP
#       port: 27017
#       targetPort: 27017
